# supply-chain-risk-monitor

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/api/: routes.py
app/core/: config.py  logging.py
app/db/: session.py
app/models/: __init__.py  article.py  ingestion.py  risk.py  watchlist.py
app/services/: ingestion.py  processing.py  risk.py  scheduler.py  watchlist.py
docs/: mvp-implementation-plan.md  mvp-release-runbook.md  project-description.md
frontend/: dashboard.py
scripts/: evaluate_relevance.py  performance_smoke.py
supply_chain_risk_monitor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_dashboard.py  test_health.py  test_ingestion.py  test_phase5.py  test_processing.py  test_risk.py
