[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "supply-chain-risk-monitor"
version = "0.1.0"
description = "MVP foundation for a supply chain risk monitoring application."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "httpx>=0.28,<1.0",
  "pydantic-settings>=2.7,<3.0",
  "sqlmodel>=0.0.22,<0.0.23",
  "streamlit>=1.43,<2.0",
  "uvicorn>=0.34,<0.35",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "ruff>=0.11,<0.12",
]

[tool.setuptools.packages.find]
include = ["app*", "frontend*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
